<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homepage"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/battery"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_green_energy"
        android:icon="@drawable/renewable_energy"
        android:title="@string/title_green_energy" />

    <item
        android:id="@+id/navigation_charge"
        android:icon="@drawable/electric_station"
        android:title="@string/title_charge" />

    <item
        android:id="@+id/navigation_dr"
        android:icon="@drawable/save"
        android:title="@string/title_dr" />

</menu>
